test/sema/struct-no-auto-reference.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct Foo { let i: int; }

func foo(ref_f: Foo*) { }

func main() {
    let f: Foo = uninitialized;
    // CHECK: [[@LINE+1]]:9: error: invalid argument #1 type 'Foo' to 'foo', expected 'Foo*'
    foo(f);
}
